# Edu-Job-api

./: .gitignore  pyproject.toml  requirements.txt
api/: generate_test_data.py
api/api/: settings.py  urls.py
api/auth/: models.py
api/authentication/: manager.py  models.py  serializers.py  urls.py  views.py
api/cadidates/: apps.py  models.py
api/candidates/: apps.py  models.py  serializers.py  urls.py  views.py
api/positions/: apps.py  models.py  serializers.py  urls.py  views.py
api/recruitment_process/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
